// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`vlt-callout is dismissable 1`] = `
<div
  class="Vlt-callout Vlt-callout--tip"
>
  <i />
   
  <div
    class="Vlt-callout__content"
  />
   
  <button
    class="Vlt-callout__dismiss"
  />
</div>
`;

exports[`vlt-callout is dismissed 1`] = `
<div
  class="Vlt-callout Vlt-callout--dismissed Vlt-callout--tip"
>
  <i />
   
  <div
    class="Vlt-callout__content"
  />
   
  <button
    class="Vlt-callout__dismiss"
  />
</div>
`;

exports[`vlt-callout is type critical 1`] = `
<div
  class="Vlt-callout Vlt-callout--critical"
>
  <i />
   
  <div
    class="Vlt-callout__content"
  />
   
  <!---->
</div>
`;

exports[`vlt-callout renders correctly 1`] = `
<div
  class="Vlt-callout Vlt-callout--tip"
>
  <i />
   
  <div
    class="Vlt-callout__content"
  />
   
  <!---->
</div>
`;
